Added UserType and Tourism Type and Preferences

--- a/SmartTourist/SmartTourist.Domain/SmartTourist.Domain.csproj
+++ b/SmartTourist/SmartTourist.Domain/SmartTourist.Domain.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Enums\TourismType.cs" />
+    <Compile Include="Enums\UserType.cs" />
     <Compile Include="Journey.cs" />
     <Compile Include="JourneyStatus.cs" />
     <Compile Include="Localization\LocalizationKeys.cs" />
